# RAGtest

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/ragtest/: path.py
src/ragtest/utils/: preprocessing.py
